--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,12 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family:'poppins';
+  font-family: 'poppins';
+}
+ul {
+  list-style: none;
 }
 
-
-
-
-
+a {
+  text-decoration: none;
+}
